tests/negative/InfixErrorP.juvix
module InfixErrorP;

  syntax fixity pair := binary;

  syntax operator , pair;

  type Pair :=
   , : Type → Type → Pair;

  fst : Pair → Type
    | (x , ) := x;

end;
